# online-platform

./: CMakeLists.txt  README.md  echo-client.cpp  echo-server.cpp
include/: base_functions.h  exceptions.h  macros.h  request.h  response.h
resources/: excample-http-response.html  http-excample.html
src/: base_functions.cpp  request.cpp
test/: main.cpp  tests.cpp
toys/: echo-client  echo-client.cpp  echo-server  echo-server.cpp  main.cpp
